cabal-version:       2.4
name:                webgear-benchmarks
version:             0.1.0
description:         Benchmarks for webgear
homepage:            https://github.com/rkaippully/webgear/webgear-benchmarks#readme
bug-reports:         https://github.com/rkaippully/webgear/issues
author:              Raghu Kaippully
maintainer:          rkaippully@gmail.com
copyright:           2020 Raghu Kaippully
license:             MPL-2.0
license-file:        LICENSE
build-type:          Simple
extra-source-files:  README.md


source-repository head
  type:      git
  location:  https://github.com/rkaippully/webgear

executable bench-users
  default-language:   Haskell2010
  build-depends:      base                  >=4.13.0.0 && <5
                    , mtl                   ==2.2.*
                    , wai                   ==3.2.*
                    , warp                  ==3.3.*
                    , text                  ==1.2.*
                    , bytestring            ==0.10.*
                    , time                  ==1.9.*
                    , unordered-containers  ==0.2.*
                    , hashable              ==1.3.*
                    , aeson                 ==1.4.*
                    , http-types            ==0.12.*
                    , tagged                ==0.8.*
                    , criterion             ==1.5.*
                    , servant               >=0.16 && <0.19
                    , servant-server        >=0.16 && <0.19
                    , scotty                >=0.11.6 && <0.13
                    , webgear-server
  ghc-options:        -O2
                      -threaded
                      -rtsopts
                      -with-rtsopts=-N
                      -fwrite-ide-info
                      -hiedir=.hie
                      -Wall
                      -Wno-unticked-promoted-constructors
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
  main-is:            Main.hs
  other-modules:      Model
                    , WebGear
                    , Servant
                    , Scotty
  hs-source-dirs:     src/users