cabal-version:       2.4
name:                webgear-examples
version:             0.2.1
description:         Please see the README at <https://github.com/rkaippully/webgear/webgear-examples#readme>
homepage:            https://github.com/rkaippully/webgear/webgear-examples#readme
bug-reports:         https://github.com/rkaippully/webgear/issues
author:              Raghu Kaippully
maintainer:          rkaippully@gmail.com
copyright:           2020 Raghu Kaippully
license:             MPL-2.0
license-file:        LICENSE
build-type:          Simple
extra-source-files:  README.md


source-repository head
  type:      git
  location:  https://github.com/rkaippully/webgear

executable hello
  default-language:   Haskell2010
  build-depends:      base                  >=4.12.0.0 && <5
                    , http-types            ==0.12.*
                    , wai                   ==3.2.*
                    , warp                  ==3.3.*
                    , webgear-server
  ghc-options:        -threaded
                      -rtsopts
                      -with-rtsopts=-N
                      -Wall
                      -Wno-unticked-promoted-constructors
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
  main-is:            Main.hs
  hs-source-dirs:     hello

executable users
  default-language:   Haskell2010
  build-depends:      aeson                 >=1.4 && <1.6
                    , base                  >=4.12.0.0 && <5
                    , bytestring            ==0.10.*
                    , hashable              >=1.2.7.0 && <1.4
                    , http-types            ==0.12.*
                    , mtl                   ==2.2.*
                    , text                  ==1.2.*
                    , time                  >=1.8.0.2 && <1.10
                    , unordered-containers  ==0.2.*
                    , wai                   ==3.2.*
                    , warp                  ==3.3.*
                    , webgear-server
  ghc-options:        -threaded
                      -rtsopts
                      -with-rtsopts=-N
                      -Wall
                      -Wno-unticked-promoted-constructors
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
  main-is:            Main.hs
  hs-source-dirs:     users

executable realworld
  default-language:   Haskell2010
  build-depends:      aeson                 >=1.4 && <1.6
                    , base                  >=4.12.0.0 && <5
                    , bytestring            ==0.10.*
                    , cryptonite            >=0.25
                    , sqlite-simple         >=0.4.16.0
                    , http-types            ==0.12.*
                    , jose                  >=0.8.2.0
                    , lens                  >=4.17.1
                    , monad-time            ==0.3.1.0
                    , mtl                   ==2.2.*
                    , safe-exceptions       ==0.1.*
                    , text                  ==1.2.*
                    , time                  >=1.8.0.2 && <1.10
                    , wai                   ==3.2.*
                    , warp                  ==3.3.*
                    , webgear-server
  ghc-options:        -threaded
                      -rtsopts
                      -with-rtsopts=-N
                      -Wall
                      -Wno-unticked-promoted-constructors
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
  hs-source-dirs:     realworld
  main-is:            Main.hs
  other-modules:      Types
                    , Model
                    , API.Util
                    , API.User