cabal-version:       2.4
name:                webgear-examples
version:             0.2.1
description:         Please see the README at <https://github.com/rkaippully/webgear/webgear-examples#readme>
homepage:            https://github.com/rkaippully/webgear/webgear-examples#readme
bug-reports:         https://github.com/rkaippully/webgear/issues
author:              Raghu Kaippully
maintainer:          rkaippully@gmail.com
copyright:           2020 Raghu Kaippully
license:             MPL-2.0
license-file:        LICENSE
build-type:          Simple
extra-source-files:  README.md


source-repository head
  type:      git
  location:  https://github.com/rkaippully/webgear

executable hello
  default-language:   Haskell2010
  build-depends:      base                  >=4.12.0.0 && <5
                    , http-types            ==0.12.*
                    , wai                   ==3.2.*
                    , warp                  ==3.3.*
                    , webgear-server
  ghc-options:        -threaded
                      -rtsopts
                      -with-rtsopts=-N
                      -Wall
                      -Wno-unticked-promoted-constructors
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
  main-is:            Main.hs
  hs-source-dirs:     hello

executable users
  default-language:   Haskell2010
  build-depends:      aeson                 >=1.4 && <1.6
                    , base                  >=4.12.0.0 && <5
                    , bytestring            ==0.10.*
                    , hashable              >=1.2.7.0 && <1.4
                    , http-types            ==0.12.*
                    , mtl                   ==2.2.*
                    , text                  ==1.2.*
                    , time                  >=1.8.0.2 && <1.10
                    , unordered-containers  ==0.2.*
                    , wai                   ==3.2.*
                    , warp                  ==3.3.*
                    , webgear-server
  ghc-options:        -threaded
                      -rtsopts
                      -with-rtsopts=-N
                      -Wall
                      -Wno-unticked-promoted-constructors
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
  main-is:            Main.hs
  hs-source-dirs:     users

executable realworld
  default-language:   Haskell2010
  build-depends:      aeson                 >=1.4 && <1.6
                    , base                  >=4.12.0.0 && <5
                    , bytestring            ==0.10.*
                    , cryptonite            >=0.25
                    , esqueleto             >=3.0.0 && <3.5
                    , http-types            ==0.12.*
                    , jose                  >=0.8.2.0
                    , lens                  >=4.17.1
                    , monad-logger          >=0.3.31 && <0.4
                    , monad-time            ==0.3.1.0
                    , mtl                   ==2.2.*
                    , persistent            >=2.9.2 && <2.12
                    , persistent-sqlite     >=2.9.3 && <2.12
                    , persistent-template   >=2.6.0 && <2.10
                    , random                ==1.1.*
                    , relude                >=0.5.0 && <0.8
                    , resource-pool         ==0.2.*
                    , safe-exceptions       ==0.1.*
                    , text                  ==1.2.*
                    , time                  >=1.8.0.2 && <1.10
                    , uri-encode            ==1.5.*
                    , wai                   ==3.2.*
                    , warp                  ==3.3.*
                    , webgear-server
  default-extensions: NoImplicitPrelude
  ghc-options:        -threaded
                      -rtsopts
                      -with-rtsopts=-N
                      -Wall
                      -Wno-unticked-promoted-constructors
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
  hs-source-dirs:     realworld
  main-is:            Main.hs
  other-modules:      API.Article
                    , API.Comment
                    , API.Profile
                    , API.Tag
                    , API.User
                    , API.Common
                    , Model.Entities
                    , Model.Article
                    , Model.Comment
                    , Model.Profile
                    , Model.Tag
                    , Model.User
                    , Model.Common

